# chip8-emulator

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: chip8.cpp  chip8.hpp  main.cpp
tests/: CMakeLists.txt  chip8_test.cpp
